updated to match pawnpwn.pageforest.com

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html> 
-<html manifest="/app.manifest">
+<html manifest="/app.manifestasdf">
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="google-site-verification" content="ik_cRmLxtzhvgOMVCW98r1AfkpPKwDS6q-X00M6nL8c" />
 <title>Play Pawn Pwn Online</title>
 <link rel="stylesheet" type="text/css" href="pawnpwn.css"/>
 <link rel="icon" type="image/png" href="/images/icon.png" />
@@ -26,6 +27,7 @@ $(document).ready(pawnpwnUI.onReady);
 
 <body>
   <div class=hidden-div id=boardContainer><div id="divBoard" class="board"></div></div>
+  <div class=gradient></div>
   <div class="info" id="info">
     <h1 id="title">Pawn Pwn</h1>
     <div class="tableDiv" id="tableDiv">
