--- a/index.html
+++ b/index.html
@@ -26,8 +26,36 @@ $(document).ready(pawnpwnUI.onReady);
 </head>
 
 <body>
+  <div class=board id=board>
+    <div class=divBoard id=divBoard></div>
+  </div>
+  <div class=gradientv id=gradientv></div>
+  <div class=gradienth id=gradienth></div>
+  <div class=gradientCorner id=gradientCorner></div>
+  <div class=graph id=graph>
+    <canvas class="historyGraph" id="historyGraph" width="200" height="200"></canvas>
+  </div>
+  <div class=movelist id=movelist>
+    <div class="tableDiv" id="tableDiv">
+      <div id="scroller">
+        <table class="historyTable" id="historyTable"></table>
+      </div>
+    </div>
+  </div>
+  <div class="divButtons" id="buttons">
+      <img class=button id=back src=images/back.png></img>
+      <div class=moveNum id=moveNum>12</div>
+      <img class=button id=fwd src=images/fwd.png></img>
+  </div>
+  <div class=title id=title>
+    <div id=text><h1>Pawn Pwn</h1></div>
+    <img class=about id=about src=images/about.png>
+    <img class=sign-in id=signIn src=images/sign-in.png>
+  </div>
+
+<!-- 
   <div class=hidden-div id=boardContainer><div id="divBoard" class="board"></div></div>
-  <div class=gradient></div>
+
   <div class="info" id="info">
     <h1 id="title">Pawn Pwn</h1>
     <div class="tableDiv" id="tableDiv">
@@ -37,12 +65,14 @@ $(document).ready(pawnpwnUI.onReady);
     </div>
     <div class="divButtons" id="buttons">
       <img class=button id=back src=images/back.png></img>
+      <div class=moveNum id=moveNum>1</div>
       <img class=button id=fwd src=images/fwd.png></img>
     </div>
     <img class=sign-in id=signIn></img>
     <div class="divGraph" id="divGraph">
       <canvas class="historyGraph" id="historyGraph" width="200" height="200"></canvas>
     </div>
-  </div>
+  </div> -->
+
 </body>
 </html>
