done stuff on layout

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="/lib/beta/js/json2.min.js"></script>
 <script type="text/javascript" src="/lib/beta/js/utils.js"></script>
-<script type="text/javascript" src="/iscroll/iscroll.js"></script>
-<script src="pawnpwn.js"></script>
+<script type="text/javascript" src="iscroll/iscroll.js"></script>
+<script src="about.js"></script>
 <script src="pawnpwnUI.js"></script>
+<script src="pawnpwn.js"></script>
 <script src="move-controller.js"></script>
 <script src="graph.js"></script>
 <script type="text/javascript">
@@ -44,13 +45,13 @@ $(document).ready(pawnpwnUI.onReady);
   </div>
   <div class="divButtons" id="buttons">
       <img class=button id=back src=images/back.png></img>
-      <div class=moveNum id=moveNum>12</div>
-      <img class=button id=fwd src=images/fwd.png></img>
+      <div class=moveNum id=moveNum>Move 12</div>
+      <img class="button fwd" id=fwd src=images/fwd.png></img>
   </div>
   <div class=title id=title>
-    <div id=text><h1>Pawn Pwn</h1></div>
-    <img class=about id=about src=images/about.png>
-    <img class=sign-in id=signIn src=images/sign-in.png>
+    <div class=text id=text><h1>Pawn Pwn</h1></div>
+    <img class=about id=about src=images/about30.png>
+    <img class=sign-in id=signIn src=images/signin30.png>
   </div>
 
 <!-- 
