--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ $(document).ready(pawnpwnUI.onReady);
   </div>
   <div class="divButtons" id="buttons">
       <img class=button id=back src=images/back.png></img>
-      <div class=moveNum id=moveNum>Move 12</div>
+      <div class=moveNum id=moveNum>Move 1</div>
       <img class="button fwd" id=fwd src=images/fwd.png></img>
   </div>
   <div class=title id=title>
     <div class=text id=text><h1>Pawn Pwn</h1></div>
-    <img class=about id=about src=images/about30.png>
+    <img class=about id=about src=images/about30wide.png>
     <img class=sign-in id=signIn src=images/signin30.png>
   </div>
 
