changed to nearly all javascript for layout, got views 1-4 working

--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@ $(document).ready(pawnpwnUI.onReady);
   </div>
   <div class=title id=title>
     <div class=text id=text><h1>Pawn Pwn</h1></div>
+  </div>
+  <div class=aboutsi id=aboutsi>
     <img class=about id=about src=images/about30wide.png>
     <img class=sign-in id=signIn src=images/signin30.png>
   </div>
-
 <!-- 
   <div class=hidden-div id=boardContainer><div id="divBoard" class="board"></div></div>
 
