layout completed, added current move notification blinker

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ $(document).ready(pawnpwnUI.onReady);
 <body>
   <div class=board id=board>
     <div class=divBoard id=divBoard></div>
+
   </div>
   <div class=gradientv id=gradientv></div>
   <div class=gradienth id=gradienth></div>
@@ -44,9 +45,9 @@ $(document).ready(pawnpwnUI.onReady);
     </div>
   </div>
   <div class="divButtons" id="buttons">
-      <img class=button id=back src=images/back.png></img>
+      <img class=button id=back src=images/back.png>
       <div class=moveNum id=moveNum>Move 1</div>
-      <img class="button fwd" id=fwd src=images/fwd.png></img>
+      <img class="button fwd" id=fwd src=images/fwd.png>
   </div>
   <div class=title id=title>
     <div class=text id=text><h1>Pawn Pwn</h1></div>
