--- a/about.html
+++ b/about.html
@@ -12,10 +12,12 @@
     $(document).ready(pawnpwnUI.onReady);
 </script>
 <style>
-	body { background-color: #EEE; width: 95%; margin: auto; font-size: 20px; }
-	body.wide { width: 700px; }
+	body { background-color: #EEE; width: 95%; margin: auto; font-size: 28px; }
+	body.wide { width: 758px; }
 	a:link { color: #333; }
 	a:hover { color: #555; }
+	a:visited { color: #333; }
+	a:visited:hover { color: #555; }
 </style>
 </head>
 
@@ -33,6 +35,6 @@ Pageforest will automatically save your game and adjust the url in your address 
 </p>
 <p id=linkp>
 </p>
-<h4 id=linkh></h4>
+<a id=linkh href="google.com"></a>
 </body>
 </html>
