--- a/index.html
+++ b/index.html
@@ -12,13 +12,8 @@
 <link rel="stylesheet" type="text/css" href="/lib/beta/css/client.css" />
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="/lib/beta/js/json2.min.js"></script>
-<script type="text/javascript" src="/lib/beta/js/utils.js"></script>
-<script type="text/javascript" src="iscroll/iscroll.js"></script>
-<script src="about.js"></script>
-<script src="pawnpwnUI.js"></script>
-<script src="pawnpwn.js"></script>
-<script src="move-controller.js"></script>
-<script src="graph.js"></script>
+<script type="text/javascript" src="/lib/beta/js/utils.min.js"></script>
+<script src="combined.min.js"></script>
 <script type="text/javascript">
 var pawnpwnUI = namespace.lookup("com.pageforest.pawnpwnUI");
 $(document).ready(pawnpwnUI.onReady);
@@ -29,7 +24,6 @@ $(document).ready(pawnpwnUI.onReady);
 <body>
   <div class=board id=board>
     <div class=divBoard id=divBoard></div>
-
   </div>
   <div class=gradientv id=gradientv></div>
   <div class=gradienth id=gradienth></div>
