--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html manifest="/app.manifest">
 <head>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -10,10 +10,8 @@
 <link rel="icon" type="image/png" href="/images/icon.png" />
 <link rel="apple-touch-icon" href="/images/touch.png" />
 <link rel="stylesheet" type="text/css" href="/lib/beta/css/client.css" />
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
-<script type="text/javascript" src="/lib/beta/js/json2.min.js"></script>
-<script type="text/javascript" src="/lib/beta/js/utils.min.js"></script>
-<script src="combined.min.js"></script>
+<script type="text/javascript" src="/lib/beta/js/pf-client.min.js"></script>
+<script type="text/javascript" src="/combined.min.js"></script>
 <script type="text/javascript">
 var pawnpwnUI = namespace.lookup("com.pageforest.pawnpwnUI");
 $(document).ready(pawnpwnUI.onReady);
