--- a/about.html
+++ b/about.html
@@ -1,40 +1,79 @@
-<!DOCTYPE html> 
-<html>
+<!DOCTYPE html>
+<html manifest="/app.manifest">
 <head>
 <title>About Pawn Pwn</title>
-<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-<script type="text/javascript" src="/lib/beta/js/json2.min.js"></script>
-<script type="text/javascript" src="/lib/beta/js/utils.js"></script>
+<link rel="stylesheet" type="text/css" href="/about.css" />
+<script type="text/javascript" src="/lib/beta/js/pf-client.js"></script>
 <script src='/about.js'></script>
 <script type="text/javascript">
-    var pawnpwnUI = namespace.lookup("com.pageforest.aboutpawnpwn");
-    $(document).ready(pawnpwnUI.onReady);
+  $(document).ready(namespace.com.pageforest.pawnpwn.about.onReady);
 </script>
-<style>
-	body { background-color: #EEE; width: 95%; margin: auto; font-size: 28px; }
-	body.wide { width: 758px; }
-	a:link { color: #333; }
-	a:hover { color: #555; }
-	a:visited { color: #333; }
-	a:visited:hover { color: #555; }
-</style>
 </head>
 
-
 <body>
-<h3>Welcome to the Pawn Pwn about page!</h3>
-<p>
-The goal of Pawn Pwn is to get your pawn to your opponent's home row.  On your turn you can move your pawn or place a wall.  
-Use walls to make your opponent's path longer, however you may not completely prevent them from reaching a goal square.  
-When you are adjacent to your opponent, you can move to any square they can move to.
-</p>
-<p>
-To start a new game with a with an friend over the web, make sure you are signed in to Pageforest, and make your first move.  
-Pageforest will automatically save your game and adjust the url in your address bar.
-</p>
-<p id=linkp>
-</p>
-<a id=linkh href="google.com"></a>
+
+<div class=page>
+
+  <h1>Welcome to Pawn Pwn!</h1>
+
+  <p>
+  Pawn Pwn is a fun game you can play between two players - either in person, or over the Internet.
+  The game is designed to work well in a web browser, an iPad or any mobile smart phone.  Depending on the
+  size of the screen, you will see:
+  </p>
+
+  <ul>
+    <li>A 9 x 9 board on which you will take turns moving your pieces.</li>
+    <li>A graphical representation of the history of the game.  The closer your get
+      to your opponent's home row, the lower your colored line gets on the graph.  First
+      one to <i>zero</i> wins!</li>
+    <li>A move list.  Move notation indicates the row and column your pawn is moving to
+      (just as in chess notation).  Wall placements list the square at the upper right
+      of the placed wall, and whether a wall is placed <i>vertically</i> or <i>horizontally</i>.</li>
+    <li>Undo/redo buttons.  You can take back the last move, or replay moves that have been
+      taken back by hidding the foward or backward arrows on the board.</li>
+  </ul>
+
+  <h2>Rules for Pawn Pwn</h2>
+  <p>
+  The goal of Pawn Pwn is to get your pawn to your opponent's home row
+  before he can reach yours. On your turn you can either:
+  </p>
+
+  <ul>
+    <li>Move your pawn one space forward, back, left or right.</li>
+    <li>Place one of your walls on the board to make your opponent's path longer.</li>
+  </ul>
+
+  <p><i>You are not allowed to completely prevent your opponent from reaching your home row
+  along <b>some</b> path.</i></p>
+
+  <p><i>Note: when two pawns meet in the middle of the board, your pawn may jump to any square
+    adjacent to your opponent's pawn (i.e., you can jump over your opponent's pawn).</i></p>
+
+  <h2>Playing over the Internet</h2>
+
+  <p class=if-not-saved>
+  To start a new game with a with an friend over the web, make sure
+  you are signed in to Pageforest, and make your first move. Your game
+  will be automatically saved and the link in your browser address bar
+  will be updated.
+  </p>
+
+  <p class=if-not-saved>
+  After your game is saved, click the About button to come back to this page
+  to send them an email link to your game.
+  </p>
+
+  <p class=if-saved>
+  To start playing online, send your friend a link to this game in an <a id=mail-link>email</a>, or
+  in some other way:
+  <blockquote>
+    <a id=url-link></a>
+  </blockquote>
+  </p>
+
+</div>
+
 </body>
 </html>
